Updated some sales tax stuff, improved accuracy
